--- a/app/src/main/res/drawable/splash_icon_wrapper.xml
+++ b/app/src/main/res/drawable/splash_icon_wrapper.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <inset xmlns:android="http://schemas.android.com/apk/res/android"
-    android:drawable="@drawable/logo_isyara"
-    android:insetLeft="100dp"
-    android:insetRight="100dp"
-    android:insetTop="100dp"
-    android:insetBottom="100dp" />
+    android:drawable="@drawable/logo_with_tagline"
+    android:insetLeft="32dp"
+    android:insetRight="32dp"
+    android:insetTop="32dp"
+    android:insetBottom="32dp" />
