--- a/app/src/main/res/drawable/logo_isyara_putih.xml
+++ b/app/src/main/res/drawable/logo_isyara_putih.xml
@@ -1,66 +1,67 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="36dp"
-    android:height="48dp"
-    android:viewportWidth="36"
-    android:viewportHeight="48">
-  <group>
-    <clip-path
-        android:pathData="M0,0.113H35.883V19.306H0V0.113Z"/>
+    android:width="108dp"
+    android:height="108dp"
+    android:viewportWidth="108"
+    android:viewportHeight="108">
+
+  <group
+      android:translateX="36"
+      android:translateY="30">
+
+    <group>
+      <clip-path android:pathData="M0,0.113H35.883V19.306H0V0.113Z" />
+      <path
+          android:fillColor="#ffffff"
+          android:fillType="evenOdd"
+          android:pathData="M20.717,6.933C15.941,6.933 11.77,9.184 9.719,12.467C7.338,13.445 5.148,14.741 3.208,16.332C2.093,17.24 1.102,18.241 0.235,19.298C0.18,18.979 0.139,18.661 0.111,18.332C-0.303,13.161 2.079,8.445 6.126,5.116C9.857,2.024 15.019,0.115 20.717,0.115H35.792C35.833,0.115 35.86,0.138 35.86,0.172C35.86,2.047 34.951,3.729 33.465,4.956C31.978,6.184 29.941,6.933 27.67,6.933L20.717,6.933Z" />
+    </group>
+    <group>
+      <clip-path android:pathData="M4.283,0.113H35.883V15.503H4.283V0.113Z" />
+      <path
+          android:fillColor="#ffffff"
+          android:fillType="evenOdd"
+          android:pathData="M20.717,6.933C15.941,6.933 11.77,9.184 9.719,12.467C7.778,13.252 5.975,14.264 4.336,15.457C5.397,8.65 12.762,3.524 21.269,3.524H25.894C29.625,3.524 33.202,2.297 35.846,0.127C35.86,0.138 35.86,0.16 35.86,0.172C35.86,2.047 34.951,3.729 33.465,4.956C31.978,6.184 29.941,6.933 27.67,6.933L20.717,6.933Z" />
+    </group>
+    <group>
+      <clip-path android:pathData="M35.818,0.113H35.883V0.182H35.818V0.113Z" />
+      <path
+          android:fillColor="#ffffff"
+          android:fillType="evenOdd"
+          android:pathData="M35.86,0.115V0.172C35.86,0.16 35.86,0.138 35.846,0.127L35.86,0.115Z" />
+    </group>
+    <group>
+      <clip-path android:pathData="M0.065,13.735H35.883V47.853H0.065V13.735Z" />
+      <path
+          android:fillColor="#ffffff"
+          android:fillType="evenOdd"
+          android:pathData="M8.352,31.432C8.752,36.897 14.569,41.026 21.201,41.026H26.295C32.196,41.026 35.86,44.054 35.86,47.79C35.86,47.82 35.831,47.845 35.795,47.845H21.322C10.357,47.845 0.846,40.997 0.116,31.965C-0.301,26.8 2.075,22.084 6.126,18.753C9.857,15.661 15.019,13.752 20.717,13.752L35.795,13.752C35.831,13.752 35.86,13.776 35.86,13.806V13.806C35.86,17.542 32.192,20.57 27.666,20.57H20.717C13.623,20.57 7.918,25.497 8.352,31.432Z" />
+    </group>
+    <group>
+      <clip-path android:pathData="M4.153,13.735H35.883V47.853H4.153V13.735Z" />
+      <path
+          android:fillColor="#ffffff"
+          android:fillType="evenOdd"
+          android:pathData="M35.86,47.788C35.86,47.799 35.86,47.822 35.847,47.832C33.202,45.662 29.625,44.435 25.894,44.435L20.717,44.435C11.495,44.435 4.034,38.196 4.199,30.548C4.365,23.036 12.169,17.162 21.268,17.162H25.894C29.625,17.162 33.202,15.934 35.847,13.763C35.86,13.775 35.86,13.798 35.86,13.809C35.86,15.684 34.951,17.366 33.465,18.594C31.978,19.82 29.941,20.57 27.67,20.57H20.717C13.629,20.57 7.916,25.503 8.356,31.434C8.755,36.901 14.565,41.026 21.199,41.026H26.294C32.199,41.026 35.86,44.049 35.86,47.788Z" />
+    </group>
     <path
-        android:pathData="M20.717,6.933C15.941,6.933 11.77,9.184 9.719,12.467C7.338,13.445 5.148,14.741 3.208,16.332C2.093,17.24 1.102,18.241 0.235,19.298C0.18,18.979 0.139,18.661 0.111,18.332C-0.303,13.161 2.079,8.445 6.126,5.116C9.857,2.024 15.019,0.115 20.717,0.115H35.792C35.833,0.115 35.86,0.138 35.86,0.172C35.86,2.047 34.951,3.729 33.465,4.956C31.978,6.184 29.941,6.933 27.67,6.933L20.717,6.933Z"
         android:fillColor="#ffffff"
-        android:fillType="evenOdd"/>
-  </group>
-  <group>
-    <clip-path
-        android:pathData="M4.283,0.113H35.883V15.503H4.283V0.113Z"/>
+        android:fillType="evenOdd"
+        android:pathData="M35.86,13.752V13.809C35.86,13.797 35.86,13.775 35.846,13.763L35.86,13.752Z" />
+    <group>
+      <clip-path android:pathData="M35.818,47.751H35.883V47.853H35.818V47.751Z" />
+      <path
+          android:fillColor="#ffffff"
+          android:fillType="evenOdd"
+          android:pathData="M35.846,47.832C35.86,47.822 35.86,47.799 35.86,47.788V47.845L35.846,47.832Z" />
+    </group>
     <path
-        android:pathData="M20.717,6.933C15.941,6.933 11.77,9.184 9.719,12.467C7.778,13.252 5.975,14.264 4.336,15.457C5.397,8.65 12.762,3.524 21.269,3.524H25.894C29.625,3.524 33.202,2.297 35.846,0.127C35.86,0.138 35.86,0.16 35.86,0.172C35.86,2.047 34.951,3.729 33.465,4.956C31.978,6.184 29.941,6.933 27.67,6.933L20.717,6.933Z"
         android:fillColor="#ffffff"
-        android:fillType="evenOdd"/>
-  </group>
-  <group>
-    <clip-path
-        android:pathData="M35.818,0.113H35.883V0.182H35.818V0.113Z"/>
+        android:fillType="evenOdd"
+        android:pathData="M14.084,30.798C14.084,27.722 17.103,25.229 20.829,25.229C24.554,25.229 27.574,27.723 27.574,30.798C27.574,33.874 24.554,36.366 20.829,36.366C17.103,36.366 14.084,33.874 14.084,30.798Z" />
     <path
-        android:pathData="M35.86,0.115V0.172C35.86,0.16 35.86,0.138 35.846,0.127L35.86,0.115Z"
         android:fillColor="#ffffff"
-        android:fillType="evenOdd"/>
+        android:fillType="evenOdd"
+        android:pathData="M22.757,36.135C22.139,36.294 21.504,36.373 20.829,36.373C17.109,36.373 14.084,33.875 14.084,30.805C14.084,27.719 17.109,25.236 20.829,25.236C21.504,25.236 22.139,25.316 22.756,25.475C19.981,26.143 17.938,28.275 17.938,30.805C17.938,33.319 19.981,35.451 22.757,36.135Z" />
   </group>
-  <group>
-    <clip-path
-        android:pathData="M0.065,13.735H35.883V47.853H0.065V13.735Z"/>
-    <path
-        android:pathData="M8.352,31.432C8.752,36.897 14.569,41.026 21.201,41.026H26.295C32.196,41.026 35.86,44.054 35.86,47.79C35.86,47.82 35.831,47.845 35.795,47.845H21.322C10.357,47.845 0.846,40.997 0.116,31.965C-0.301,26.8 2.075,22.084 6.126,18.753C9.857,15.661 15.019,13.752 20.717,13.752L35.795,13.752C35.831,13.752 35.86,13.776 35.86,13.806V13.806C35.86,17.542 32.192,20.57 27.666,20.57H20.717C13.623,20.57 7.918,25.497 8.352,31.432Z"
-        android:fillColor="#ffffff"
-        android:fillType="evenOdd"/>
-  </group>
-  <group>
-    <clip-path
-        android:pathData="M4.153,13.735H35.883V47.853H4.153V13.735Z"/>
-    <path
-        android:pathData="M35.86,47.788C35.86,47.799 35.86,47.822 35.847,47.832C33.202,45.662 29.625,44.435 25.894,44.435L20.717,44.435C11.495,44.435 4.034,38.196 4.199,30.548C4.365,23.036 12.169,17.162 21.268,17.162H25.894C29.625,17.162 33.202,15.934 35.847,13.763C35.86,13.775 35.86,13.798 35.86,13.809C35.86,15.684 34.951,17.366 33.465,18.594C31.978,19.82 29.941,20.57 27.67,20.57H20.717C13.629,20.57 7.916,25.503 8.356,31.434C8.755,36.901 14.565,41.026 21.199,41.026H26.294C32.199,41.026 35.86,44.049 35.86,47.788Z"
-        android:fillColor="#ffffff"
-        android:fillType="evenOdd"/>
-  </group>
-  <path
-      android:pathData="M35.86,13.752V13.809C35.86,13.797 35.86,13.775 35.846,13.763L35.86,13.752Z"
-      android:fillColor="#ffffff"
-      android:fillType="evenOdd"/>
-  <group>
-    <clip-path
-        android:pathData="M35.818,47.751H35.883V47.853H35.818V47.751Z"/>
-    <path
-        android:pathData="M35.846,47.832C35.86,47.822 35.86,47.799 35.86,47.788V47.845L35.846,47.832Z"
-        android:fillColor="#ffffff"
-        android:fillType="evenOdd"/>
-  </group>
-  <path
-      android:pathData="M14.084,30.798C14.084,27.722 17.103,25.229 20.829,25.229C24.554,25.229 27.574,27.723 27.574,30.798C27.574,33.874 24.554,36.366 20.829,36.366C17.103,36.366 14.084,33.874 14.084,30.798Z"
-      android:fillColor="#ffffff"
-      android:fillType="evenOdd"/>
-  <path
-      android:pathData="M22.757,36.135C22.139,36.294 21.504,36.373 20.829,36.373C17.109,36.373 14.084,33.875 14.084,30.805C14.084,27.719 17.109,25.236 20.829,25.236C21.504,25.236 22.139,25.316 22.756,25.475C19.981,26.143 17.938,28.275 17.938,30.805C17.938,33.319 19.981,35.451 22.757,36.135Z"
-      android:fillColor="#ffffff"
-      android:fillType="evenOdd"/>
+
 </vector>
